--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -24,6 +24,7 @@
           <div class="navbar-nav ms-auto navbar-ml">
             <a class="nav-link" href="{% url 'home.about' %}">About</a>
             <a class="nav-link" href="{% url 'movies.index' %}">Movies</a>
+            <a class="nav-link" href="{% url 'movies.local_popularity_map' %}">Local Popularity Map</a>
             <a class="nav-link" href="{% url 'cart.index' %}">Cart</a>
             <a class="nav-link" href="{% url 'cart.feedback_list' %}">Feedback</a>
             <div class="vr bg-white mx-2 d-none d-lg-block"></div>
