--- a/movies/templates/movies/local_popularity_map.html
+++ b/movies/templates/movies/local_popularity_map.html
@@ -48,11 +48,15 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
+{{ template_data.regions|json_script:"region-data" }}
+
 <script>
 // Pass region data from Django template to JavaScript
-var regionData = {{ template_data.regions|safe }};
+var regionData = JSON.parse(document.getElementById('region-data').textContent);
 
 document.addEventListener('DOMContentLoaded', function() {
+    console.log('Region data loaded:', regionData);
+    
     // Initialize the map centered on the world
     var map = L.map('map').setView([20, 0], 2);
     
